@@ -2,356 +2,415 @@ package org.jinx.handler;
 
 import jakarta.persistence.*;
 import org.jinx.context.ProcessingContext;
-import org.jinx.model.ColumnModel;
-import org.jinx.model.EntityModel;
-import org.jinx.model.SchemaModel;
+import org.jinx.context.DefaultNaming;
+import org.jinx.model.*;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import javax.annotation.processing.Messager;
 import javax.lang.model.element.*;
 import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.TypeKind;
-import javax.lang.model.util.Elements;
-import javax.lang.model.util.Types;
+import javax.lang.model.type.TypeMirror;
 import javax.tools.Diagnostic;
 import java.util.*;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class EntityHandlerTest {
 
-    @Mock
-    private ProcessingContext context;
-    @Mock
-    private ColumnHandler columnHandler;
-    @Mock
-    private EmbeddedHandler embeddedHandler;
-    @Mock
-    private ConstraintHandler constraintHandler;
-    @Mock
-    private SequenceHandler sequenceHandler;
-    @Mock
-    private SchemaModel schemaModel;
-    @Mock
-    private Messager messager;
-    @Mock
-    private ElementCollectionHandler elementCollectionHandler;
-
-    // Main @Entity class element
-    @Mock
-    private TypeElement entityTypeElement;
-    @Mock
-    private Name entityName;
-
-    // Fields within the entity
-    @Mock
-    private VariableElement idField;
-    @Mock
-    private Name idFieldName;
-    @Mock
-    private VariableElement nameField;
-    @Mock
-    private Name nameFieldName;
-    @Mock
-    private VariableElement transientField;
-    @Mock
-    private VariableElement embeddedField;
+    @Mock private ProcessingContext context;
+    @Mock private ColumnHandler columnHandler;
+    @Mock private EmbeddedHandler embeddedHandler;
+    @Mock private ConstraintHandler constraintHandler;
+    @Mock private SequenceHandler sequenceHandler;
+    @Mock private ElementCollectionHandler elementCollectionHandler;
+    @Mock private TableGeneratorHandler tableGeneratorHandler;
+    @Mock private TypeElement typeElement;
+    @Mock private javax.annotation.processing.Messager messager;
 
     private EntityHandler entityHandler;
-    private Map<String, EntityModel> entitiesMap;
+    private SchemaModel schemaModel;
+    private DefaultNaming naming;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-        entitiesMap = spy(new HashMap<>());
+        schemaModel = new SchemaModel();
+        naming = new DefaultNaming(63);
 
-        // Setup main handler and its dependencies
-        entityHandler = new EntityHandler(context, columnHandler, embeddedHandler, constraintHandler, sequenceHandler, elementCollectionHandler);
-
-        // Common context setup
-        Types typeUtils   = mock(Types.class);
-        Elements elemUtils = mock(Elements.class);
-        when(context.getTypeUtils()).thenReturn(typeUtils);
-        when(context.getElementUtils()).thenReturn(elemUtils);
-        when(elemUtils.getTypeElement("java.util.Map")).thenReturn(mock(TypeElement.class));
         when(context.getSchemaModel()).thenReturn(schemaModel);
-        when(schemaModel.getEntities()).thenReturn(entitiesMap);
+        when(context.getNaming()).thenReturn(naming);
         when(context.getMessager()).thenReturn(messager);
 
-        // Setup for the main @Entity class
-        when(entityTypeElement.getQualifiedName()).thenReturn(entityName);
-        when(entityName.toString()).thenReturn("com.example.User");
-        when(entityTypeElement.getSimpleName()).thenReturn(entityName);
-        when(entityTypeElement.getSuperclass()).thenReturn(mock(DeclaredType.class)); // Default to avoid NPE
-
-        // Setup for fields
-        when(idField.getKind()).thenReturn(javax.lang.model.element.ElementKind.FIELD);
-        when(idField.getSimpleName()).thenReturn(idFieldName);
-        when(idFieldName.toString()).thenReturn("id");
-        when(idField.getAnnotation(Id.class)).thenReturn(mock(Id.class));
-
-        when(nameField.getKind()).thenReturn(javax.lang.model.element.ElementKind.FIELD);
-        when(nameField.getSimpleName()).thenReturn(nameFieldName);
-        when(nameFieldName.toString()).thenReturn("name");
-
-        when(transientField.getKind()).thenReturn(javax.lang.model.element.ElementKind.FIELD);
-        when(transientField.getAnnotation(Transient.class)).thenReturn(mock(Transient.class));
-
-        when(embeddedField.getKind()).thenReturn(javax.lang.model.element.ElementKind.FIELD);
-        when(embeddedField.getAnnotation(Embedded.class)).thenReturn(mock(Embedded.class));
+        entityHandler = new EntityHandler(context, columnHandler, embeddedHandler,
+                constraintHandler, sequenceHandler, elementCollectionHandler, tableGeneratorHandler);
     }
 
     @Test
-    @DisplayName("Should process a simple entity and its basic fields")
-    void handle_WithSimpleEntity_CreatesEntityModelAndColumns() {
+    void testCreateEntityModel_WithTableAnnotation() {
         // Given
-        Name qName = mock(Name.class);
-        when(qName.toString()).thenReturn("com.example.User");
-        when(entityTypeElement.getQualifiedName()).thenReturn(qName);
-
-        Name sName = mock(Name.class);
-        when(sName.toString()).thenReturn("User");
-        when(entityTypeElement.getSimpleName()).thenReturn(sName);
-
-        doReturn(List.of(idField, nameField, transientField)).when(entityTypeElement).getEnclosedElements();
-
-        when(columnHandler.createFrom(eq(idField), any())).thenReturn(ColumnModel.builder().columnName("id").isPrimaryKey(true).build());
-        when(columnHandler.createFrom(eq(nameField), any())).thenReturn(ColumnModel.builder().columnName("name").build());
+        Table tableAnnotation = mock(Table.class);
+        when(tableAnnotation.name()).thenReturn("custom_table");
+        when(typeElement.getAnnotation(Table.class)).thenReturn(tableAnnotation);
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
 
         // When
-        entityHandler.handle(entityTypeElement);
+        entityHandler.handle(typeElement);
 
         // Then
-        assertThat(entitiesMap).containsKey("com.example.User");
-        EntityModel createdEntity = entitiesMap.get("com.example.User");
-        assertThat(createdEntity.getTableName()).isEqualTo("User");
-        assertThat(createdEntity.getColumns()).hasSize(2);
-        assertThat(createdEntity.getColumns()).containsKey("id");
-        assertThat(createdEntity.getColumns()).containsKey("name");
+        EntityModel entity = schemaModel.getEntities().get("com.example.TestEntity");
+        assertNotNull(entity);
+        assertEquals("com.example.TestEntity", entity.getEntityName());
+        assertEquals("custom_table", entity.getTableName());
+        assertTrue(entity.isValid());
+    }
 
-        // Verify transient field was skipped and not passed to columnHandler
+    @Test
+    void testCreateEntityModel_WithoutTableAnnotation() {
+        // Given
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        EntityModel entity = schemaModel.getEntities().get("com.example.TestEntity");
+        assertNotNull(entity);
+        assertEquals("com.example.TestEntity", entity.getEntityName());
+        assertEquals("TestEntity", entity.getTableName()); // Uses simple name as default
+        assertTrue(entity.isValid());
+    }
+
+    @Test
+    void testCreateEntityModel_DuplicateEntity() {
+        // Given
+        String entityName = "com.example.TestEntity";
+        when(typeElement.getQualifiedName()).thenReturn(mockName(entityName));
+
+        // Pre-populate with existing entity
+        EntityModel existingEntity = EntityModel.builder()
+                .entityName(entityName)
+                .tableName("existing_table")
+                .isValid(true)
+                .build();
+        schemaModel.getEntities().put(entityName, existingEntity);
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        verify(messager).printMessage(eq(Diagnostic.Kind.ERROR),
+                contains("Duplicate entity found"), eq(typeElement));
+
+        // Original entity should remain unchanged
+        EntityModel entity = schemaModel.getEntities().get(entityName);
+        assertEquals("existing_table", entity.getTableName());
+        assertTrue(entity.isValid());
+    }
+
+    @Test
+    void testProcessMappedSuperclass() {
+        // Given
+        TypeElement superclassElement = mock(TypeElement.class);
+        VariableElement field1 = mockField("field1", null);
+        VariableElement field2 = mockField("field2", null);
+
+        when(superclassElement.getAnnotation(MappedSuperclass.class)).thenReturn(mock(MappedSuperclass.class));
+        doReturn(Arrays.asList(field1, field2)).when(superclassElement).getEnclosedElements();
+        when(superclassElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
+
+        TypeMirror superTypeMirror = mock(DeclaredType.class);
+        when(superTypeMirror.getKind()).thenReturn(TypeKind.DECLARED);
+        when(((DeclaredType) superTypeMirror).asElement()).thenReturn(superclassElement);
+
+        when(typeElement.getSuperclass()).thenReturn(superTypeMirror);
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        when(typeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
+
+        ColumnModel column1 = ColumnModel.builder().columnName("field1").build();
+        ColumnModel column2 = ColumnModel.builder().columnName("field2").build();
+        when(columnHandler.createFrom(eq(field1), any())).thenReturn(column1);
+        when(columnHandler.createFrom(eq(field2), any())).thenReturn(column2);
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        EntityModel entity = schemaModel.getEntities().get("com.example.TestEntity");
+        assertNotNull(entity);
+        assertEquals(2, entity.getColumns().size());
+        assertTrue(entity.getColumns().containsKey("field1"));
+        assertTrue(entity.getColumns().containsKey("field2"));
+    }
+
+    @Test
+    void testProcessEmbeddedId() {
+        // Given
+        VariableElement embeddedIdField = mockField("compositeId", EmbeddedId.class);
+        TypeElement embeddableType = mock(TypeElement.class);
+        VariableElement keyField1 = mockField("key1", null);
+        VariableElement keyField2 = mockField("key2", null);
+
+        DeclaredType embeddedIdType = mock(DeclaredType.class);
+        when(embeddedIdField.asType()).thenReturn(embeddedIdType);
+        when(embeddedIdType.asElement()).thenReturn(embeddableType);
+        doReturn(Arrays.asList(keyField1, keyField2)).when(embeddableType).getEnclosedElements();
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        doReturn(Arrays.asList(embeddedIdField)).when(typeElement).getEnclosedElements();
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        verify(embeddedHandler).processEmbedded(eq(embeddedIdField), any(EntityModel.class), any(HashSet.class));
+    }
+
+    @Test
+    void testProcessSecondaryTable() {
+        // Given
+        SecondaryTable secondaryTable = mock(SecondaryTable.class);
+        when(secondaryTable.name()).thenReturn("secondary_table");
+        when(secondaryTable.pkJoinColumns()).thenReturn(new PrimaryKeyJoinColumn[0]);
+
+        when(typeElement.getAnnotation(SecondaryTable.class)).thenReturn(secondaryTable);
+        when(typeElement.getAnnotation(SecondaryTables.class)).thenReturn(null);
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        when(typeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
+
+        // Mock primary key columns for join processing
+        ColumnModel pkColumn = ColumnModel.builder()
+                .columnName("id")
+                .isPrimaryKey(true)
+                .build();
+        when(context.findAllPrimaryKeyColumns(any(EntityModel.class)))
+                .thenReturn(Arrays.asList(pkColumn));
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        EntityModel entity = schemaModel.getEntities().get("com.example.TestEntity");
+        assertNotNull(entity);
+        assertTrue(entity.getRelationships().size() > 0);
+    }
+
+    @Test
+    void testProcessInheritanceJoin() {
+        // Given
+        TypeElement parentType = mock(TypeElement.class);
+        Inheritance inheritance = mock(Inheritance.class);
+        when(inheritance.strategy()).thenReturn(InheritanceType.JOINED);
+        when(parentType.getAnnotation(Inheritance.class)).thenReturn(inheritance);
+        when(parentType.getQualifiedName()).thenReturn(mockName("com.example.ParentEntity"));
+
+        DeclaredType parentTypeMirror = mock(DeclaredType.class);
+        when(parentTypeMirror.getKind()).thenReturn(TypeKind.DECLARED);
+        when(parentTypeMirror.asElement()).thenReturn(parentType);
+
+        when(typeElement.getSuperclass()).thenReturn(parentTypeMirror);
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.ChildEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("ChildEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        when(typeElement.getAnnotation(PrimaryKeyJoinColumns.class)).thenReturn(null);
+        when(typeElement.getAnnotation(PrimaryKeyJoinColumn.class)).thenReturn(null);
+        when(typeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
+
+        // Setup parent entity in schema
+        EntityModel parentEntity = EntityModel.builder()
+                .entityName("com.example.ParentEntity")
+                .tableName("parent_table")
+                .isValid(true)
+                .build();
+        schemaModel.getEntities().put("com.example.ParentEntity", parentEntity);
+
+        ColumnModel parentPkColumn = ColumnModel.builder()
+                .columnName("id")
+                .isPrimaryKey(true)
+                .build();
+        when(context.findAllPrimaryKeyColumns(parentEntity))
+                .thenReturn(Arrays.asList(parentPkColumn));
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        EntityModel childEntity = schemaModel.getEntities().get("com.example.ChildEntity");
+        assertNotNull(childEntity);
+        assertTrue(childEntity.getRelationships().size() > 0);
+
+        // Verify FK relationship was created
+        RelationshipModel relationship = childEntity.getRelationships().values().iterator().next();
+        assertEquals(RelationshipType.SECONDARY_TABLE, relationship.getType());
+        assertEquals("parent_table", relationship.getReferencedTable());
+    }
+
+    @Test
+    void testProcessRegularFields() {
+        // Given
+        VariableElement regularField = mockField("regularField", null);
+        when(regularField.getAnnotation(ElementCollection.class)).thenReturn(null);
+        when(regularField.getAnnotation(Embedded.class)).thenReturn(null);
+        when(regularField.getAnnotation(EmbeddedId.class)).thenReturn(null);
+
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        doReturn(Arrays.asList(regularField)).when(typeElement).getEnclosedElements();
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
+
+        ColumnModel columnModel = ColumnModel.builder()
+                .columnName("regular_field")
+                .build();
+        when(columnHandler.createFrom(eq(regularField), any())).thenReturn(columnModel);
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        EntityModel entity = schemaModel.getEntities().get("com.example.TestEntity");
+        assertNotNull(entity);
+        assertEquals(1, entity.getColumns().size());
+        assertTrue(entity.getColumns().containsKey("regular_field"));
+    }
+
+    @Test
+    void testProcessElementCollection() {
+        // Given
+        VariableElement collectionField = mockField("collectionField", ElementCollection.class);
+
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        doReturn(Arrays.asList(collectionField)).when(typeElement).getEnclosedElements();
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        verify(elementCollectionHandler).processElementCollection(eq(collectionField), any(EntityModel.class));
+    }
+
+    @Test
+    void testSkipTransientFields() {
+        // Given
+        VariableElement transientField = mockField("transientField", Transient.class);
+
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        doReturn(Arrays.asList(transientField)).when(typeElement).getEnclosedElements();
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
+
+        // When
+        entityHandler.handle(typeElement);
+
+        // Then
+        EntityModel entity = schemaModel.getEntities().get("com.example.TestEntity");
+        assertNotNull(entity);
+        assertEquals(0, entity.getColumns().size()); // Transient field should be skipped
+
         verify(columnHandler, never()).createFrom(eq(transientField), any());
     }
 
     @Test
-    @DisplayName("Should correctly handle @Table annotation")
-    void handle_WithTableAnnotation_SetsTableDetails() {
+    void testSkipStaticFields() {
         // Given
-        Table table = mock(Table.class);
-        when(table.name()).thenReturn("custom_users");
-        when(table.schema()).thenReturn("public");
-        when(table.catalog()).thenReturn("main_db");
-        when(table.indexes()).thenReturn(new Index[0]);
-        when(entityTypeElement.getAnnotation(Table.class)).thenReturn(table);
-        when(entityTypeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
+        VariableElement staticField = mock(VariableElement.class);
+        when(staticField.getKind()).thenReturn(ElementKind.FIELD);
+        when(staticField.getModifiers()).thenReturn(EnumSet.of(Modifier.STATIC));
+        when(staticField.getAnnotation(Transient.class)).thenReturn(null);
+        when(staticField.getSimpleName()).thenReturn(mockName("staticField"));
+
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        doReturn(Arrays.asList(staticField)).when(typeElement).getEnclosedElements();
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
 
         // When
-        entityHandler.handle(entityTypeElement);
+        entityHandler.handle(typeElement);
 
         // Then
-        EntityModel createdEntity = entitiesMap.get("com.example.User");
-        assertThat(createdEntity.getTableName()).isEqualTo("custom_users");
-        assertThat(createdEntity.getSchema()).isEqualTo("public");
-        assertThat(createdEntity.getCatalog()).isEqualTo("main_db");
+        EntityModel entity = schemaModel.getEntities().get("com.example.TestEntity");
+        assertNotNull(entity);
+        assertEquals(0, entity.getColumns().size()); // Static field should be skipped
+
+        verify(columnHandler, never()).createFrom(eq(staticField), any());
     }
 
     @Test
-    @DisplayName("Should call EmbeddedHandler for @Embedded fields")
-    void handle_WithEmbeddedField_CallsEmbeddedHandler() {
+    void testIdClassNotSupported() {
         // Given
-        doReturn(List.of(embeddedField)).when(entityTypeElement).getEnclosedElements();
+        IdClass idClass = mock(IdClass.class);
+        when(typeElement.getAnnotation(IdClass.class)).thenReturn(idClass);
+        when(typeElement.getQualifiedName()).thenReturn(mockName("com.example.TestEntity"));
+        when(typeElement.getSimpleName()).thenReturn(mockName("TestEntity"));
+        when(typeElement.getAnnotation(Table.class)).thenReturn(null);
+        when(typeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
+        when(typeElement.getSuperclass()).thenReturn(mockTypeMirror(TypeKind.NONE));
 
         // When
-        entityHandler.handle(entityTypeElement);
+        entityHandler.handle(typeElement);
 
         // Then
-        verify(embeddedHandler).processEmbedded(eq(embeddedField), any(), any(), any());
+        verify(messager).printMessage(eq(Diagnostic.Kind.ERROR),
+                contains("IdClass is not supported"), eq(typeElement));
     }
 
-    @Test
-    @DisplayName("Should process @IdClass and mark multiple fields as primary keys")
-    void handle_WithIdClass_MarksMultiplePrimaryKeys() {
-        // Given
-        when(entityTypeElement.getAnnotation(IdClass.class)).thenReturn(mock(IdClass.class));
-        // Simulate two @Id fields for the composite key
-        VariableElement idField2 = mock(VariableElement.class);
-        Name idFieldName2 = mock(Name.class);
-        when(idField2.getKind()).thenReturn(javax.lang.model.element.ElementKind.FIELD);
-        when(idField2.getAnnotation(Id.class)).thenReturn(mock(Id.class));
-        when(idField2.getSimpleName()).thenReturn(idFieldName2);
-        when(idFieldName2.toString()).thenReturn("departmentId");
+    // Helper methods
+    private VariableElement mockField(String name, Class<? extends java.lang.annotation.Annotation> annotationClass) {
+        VariableElement field = mock(VariableElement.class);
+        when(field.getKind()).thenReturn(ElementKind.FIELD);
+        when(field.getModifiers()).thenReturn(EnumSet.noneOf(Modifier.class));
+        when(field.getSimpleName()).thenReturn(mockName(name));
 
-        doReturn(List.of(idField, idField2)).when(entityTypeElement).getEnclosedElements();
+        if (annotationClass != null) {
+            Object annotation = mock(annotationClass);
+            doReturn(annotation).when(field).getAnnotation(annotationClass);
+        }
 
-        when(columnHandler.createFrom(eq(idField), any())).thenReturn(ColumnModel.builder().columnName("id").build());
-        when(columnHandler.createFrom(eq(idField2), any())).thenReturn(ColumnModel.builder().columnName("departmentId").build());
+        // Set all other annotation getters to return null
+        when(field.getAnnotation(Transient.class)).thenReturn(
+                annotationClass == Transient.class ? (Transient) field.getAnnotation(annotationClass) : null);
+        when(field.getAnnotation(ElementCollection.class)).thenReturn(
+                annotationClass == ElementCollection.class ? (ElementCollection) field.getAnnotation(annotationClass) : null);
+        when(field.getAnnotation(Embedded.class)).thenReturn(
+                annotationClass == Embedded.class ? (Embedded) field.getAnnotation(annotationClass) : null);
+        when(field.getAnnotation(EmbeddedId.class)).thenReturn(
+                annotationClass == EmbeddedId.class ? (EmbeddedId) field.getAnnotation(annotationClass) : null);
+        when(field.getAnnotation(Column.class)).thenReturn(
+                annotationClass == Column.class ? (Column) field.getAnnotation(annotationClass) : null);
 
-        // When
-        entityHandler.handle(entityTypeElement);
-
-        // Then
-        EntityModel createdEntity = entitiesMap.get("com.example.User");
-        assertThat(createdEntity.getColumns()).hasSize(2);
-        assertThat(createdEntity.getColumns().get("id").isPrimaryKey()).isTrue();
-        assertThat(createdEntity.getColumns().get("departmentId").isPrimaryKey()).isTrue();
+        return field;
     }
 
-    @Test
-    @DisplayName("@ElementCollection 필드가 있으면 ElementCollectionHandler에게 처리를 위임해야 한다")
-    void handle_shouldDelegateToElementCollectionHandler_whenFieldIsElementCollection() {
-        // Arrange
-        Name entityName = mock(Name.class);
-        when(entityName.toString()).thenReturn("com.example.User");
-        when(entityTypeElement.getQualifiedName()).thenReturn(entityName);
-        when(entityTypeElement.getSimpleName()).thenReturn(mock(Name.class));
-        when(entityTypeElement.getSimpleName().toString()).thenReturn("User");
-
-        VariableElement collectionField = mock(VariableElement.class);
-        when(collectionField.getKind()).thenReturn(ElementKind.FIELD);
-        when(collectionField.getAnnotation(ElementCollection.class)).thenReturn(mock(ElementCollection.class));
-        doReturn(List.of(collectionField)).when(entityTypeElement).getEnclosedElements();
-
-        // Act
-        entityHandler.handle(entityTypeElement);
-
-        // Then
-        // ElementCollectionHandler의 processElementCollection 메서드가 호출되었는지 검증
-        ArgumentCaptor<EntityModel> ownerEntityCaptor = ArgumentCaptor.forClass(EntityModel.class);
-        verify(elementCollectionHandler).processElementCollection(eq(collectionField), ownerEntityCaptor.capture());
-
-        // 캡처된 엔티티가 예상하는 "User" 엔티티인지 확인
-        EntityModel capturedOwner = ownerEntityCaptor.getValue();
-        assertThat(capturedOwner.getTableName()).isEqualTo("User");
+    private Name mockName(String name) {
+        Name mockName = mock(Name.class);
+        when(mockName.toString()).thenReturn(name);
+        return mockName;
     }
 
-    @Test
-    @DisplayName("Should process @MappedSuperclass and inherit its fields")
-    void handle_WithMappedSuperclass_InheritsColumns() {
-        // Given
-        TypeElement superclassElement = mock(TypeElement.class);
-        DeclaredType superclassType = mock(DeclaredType.class);
-        VariableElement superclassField = mock(VariableElement.class);
-        Name superclassFieldName = mock(Name.class);
-
-        // Link entity to its superclass
-        when(entityTypeElement.getSuperclass()).thenReturn(superclassType);
-        when(superclassType.asElement()).thenReturn(superclassElement);
-        when(superclassType.getKind()).thenReturn(TypeKind.DECLARED);
-
-        // Configure the superclass
-        when(superclassElement.getAnnotation(MappedSuperclass.class)).thenReturn(mock(MappedSuperclass.class));
-        doReturn(List.of(superclassField)).when(superclassElement).getEnclosedElements();
-        when(superclassElement.getSuperclass()).thenReturn(mock(DeclaredType.class)); // End of hierarchy
-
-        // Configure the field within the superclass
-        when(superclassField.getKind()).thenReturn(javax.lang.model.element.ElementKind.FIELD);
-        when(superclassField.getSimpleName()).thenReturn(superclassFieldName);
-        when(superclassFieldName.toString()).thenReturn("createdDate");
-
-        when(columnHandler.createFrom(eq(superclassField), any())).thenReturn(ColumnModel.builder().columnName("createdDate").build());
-        when(entityTypeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
-
-        // When
-        entityHandler.handle(entityTypeElement);
-
-        // Then
-        EntityModel createdEntity = entitiesMap.get("com.example.User");
-        assertThat(createdEntity.getColumns()).hasSize(1);
-        assertThat(createdEntity.getColumns()).containsKey("createdDate");
+    private TypeMirror mockTypeMirror(TypeKind kind) {
+        TypeMirror typeMirror = mock(TypeMirror.class);
+        when(typeMirror.getKind()).thenReturn(kind);
+        return typeMirror;
     }
-
-    @Test
-    @DisplayName("Should skip duplicate entity and log an error")
-    void handle_WithDuplicateEntity_LogsErrorAndSkips() {
-        // Given
-        EntityModel existing = EntityModel.builder().entityName("com.example.User").isValid(true).build();
-        entitiesMap.put("com.example.User", existing);
-
-        // When
-        entityHandler.handle(entityTypeElement);
-
-        // Then
-        verify(messager).printMessage(eq(Diagnostic.Kind.ERROR), contains("Duplicate entity found"), eq(entityTypeElement));
-        EntityModel stored = entitiesMap.get("com.example.User");
-        assertThat(stored.isValid()).isTrue();
-    }
-
-    @Test
-    @DisplayName("Should skip fields with modifier transient")
-    void handle_WithModifierTransientField_SkipsField() {
-        // Given
-        Set<Modifier> modifiers = new HashSet<>();
-        modifiers.add(Modifier.TRANSIENT);
-        when(nameField.getModifiers()).thenReturn(modifiers);
-
-        doReturn(List.of(nameField)).when(entityTypeElement).getEnclosedElements();
-
-        // When
-        entityHandler.handle(entityTypeElement);
-
-        // Then
-        verify(columnHandler, never()).createFrom(eq(nameField), any());
-    }
-
-    @Test
-    @DisplayName("Should skip field if @Column's table is invalid")
-    void handle_WithInvalidSecondaryTable_FallbacksToPrimaryTable() {
-        // Given
-        Column columnAnnotation = mock(Column.class);
-        when(columnAnnotation.table()).thenReturn("non_existent_table");
-        when(nameField.getAnnotation(Column.class)).thenReturn(columnAnnotation);
-        when(nameField.getKind()).thenReturn(javax.lang.model.element.ElementKind.FIELD);
-        when(nameField.getSimpleName()).thenReturn(mock(Name.class));
-        when(nameField.getAnnotation(Transient.class)).thenReturn(null);
-
-        ColumnModel model = ColumnModel.builder().columnName("name").build();
-        when(columnHandler.createFrom(eq(nameField), any())).thenReturn(model);
-        doReturn(List.of(nameField)).when(entityTypeElement).getEnclosedElements();
-
-        // When
-        entityHandler.handle(entityTypeElement);
-
-        // Then
-        EntityModel created = entitiesMap.get("com.example.User");
-        assertThat(created.getColumns()).containsKey("name");
-    }
-
-    @Test
-    @DisplayName("Should process Index annotations on table")
-    void handle_WithIndexes_AddsIndexModels() {
-        // Given
-        Index index1 = mock(Index.class);
-        when(index1.name()).thenReturn("idx_username");
-        when(index1.columnList()).thenReturn("username");
-        when(index1.unique()).thenReturn(true);
-
-        Table table = mock(Table.class);
-        when(table.name()).thenReturn("users");
-        when(table.indexes()).thenReturn(new Index[]{index1});
-        when(table.schema()).thenReturn("public");
-        when(table.catalog()).thenReturn("main_db");
-        when(entityTypeElement.getAnnotation(Table.class)).thenReturn(table);
-        Name name = mock(Name.class);
-        when(name.toString()).thenReturn("User");
-        when(entityTypeElement.getSimpleName()).thenReturn(name);
-        when(entityTypeElement.getEnclosedElements()).thenReturn(Collections.emptyList());
-
-        // When
-        entityHandler.handle(entityTypeElement);
-
-        // Then
-        EntityModel model = entitiesMap.get("com.example.User");
-        assertThat(model.getIndexes()).containsKey("idx_username");
-        assertThat(model.getIndexes().get("idx_username").isUnique()).isTrue();
-    }
-
 }
